fix(Vendor): Order invoice and packaging slip broken css fix
Vendor dashboard single order invoice and packaging button broken issue fix

Closes #2254

--- a/assets/src/less/orders.less
+++ b/assets/src/less/orders.less
@@ -107,6 +107,8 @@
                     border-color: #ccc;
                     border-radius: 3px;
                     background-color: #fff;
+                    background-repeat: no-repeat;
+                    background-position: center;
 
                     img {
                         width: 22px !important;
